[gd_scene load_steps=32 format=3 uid="uid://dwl1u5xa8yaj3"]

[ext_resource type="Script" path="res://src/enemies/mud_mummy/mud_mummy.gd" id="1_ri1ep"]
[ext_resource type="AudioStream" uid="uid://cg44n71vqc80e" path="res://assets/sound/sfx/draugr_death.wav" id="2_4o23v"]
[ext_resource type="Texture2D" uid="uid://c4bryxeqpvgtn" path="res://assets/sprites/mud_mummy/test_mummy.png" id="2_f5ld2"]
[ext_resource type="Texture2D" uid="uid://cq2o5x1oad6go" path="res://assets/sprites/mud_mummy/fighting/Timeline 1_0000 (2).png" id="3_p6vgn"]
[ext_resource type="AudioStream" uid="uid://h4f13xwluej4" path="res://assets/sound/sfx/draugr_attack.wav" id="3_ph1a7"]
[ext_resource type="Texture2D" uid="uid://df8bbb748ylom" path="res://assets/sprites/mud_mummy/fighting/Timeline 1_0001 (2).png" id="4_0ixoj"]
[ext_resource type="AudioStream" uid="uid://duj6yptmllcc7" path="res://assets/sound/sfx/draugr_throw.wav" id="4_qyjaw"]
[ext_resource type="Texture2D" uid="uid://bvda11bxqjua6" path="res://assets/sprites/mud_mummy/fighting/Timeline 1_0002 (2).png" id="5_g3g2q"]
[ext_resource type="AudioStream" uid="uid://d2mu6t4bmsyuy" path="res://assets/sound/sfx/draugr_movement.wav" id="5_ibqi1"]
[ext_resource type="Texture2D" uid="uid://cy03t3x73vsid" path="res://assets/sprites/mud_mummy/walking/Timeline 1_0000.png" id="6_2omg2"]
[ext_resource type="Texture2D" uid="uid://i5kpisndtua0" path="res://assets/sprites/mud_mummy/walking/Timeline 1_0001.png" id="7_khcqr"]
[ext_resource type="Texture2D" uid="uid://bio2qj8hgl762" path="res://assets/sprites/mud_mummy/walking/Timeline 1_0002.png" id="8_tqyqj"]
[ext_resource type="Texture2D" uid="uid://cj7u3jmnj7uh1" path="res://assets/sprites/mud_mummy/walking/Timeline 1_0003.png" id="9_73ulm"]
[ext_resource type="Texture2D" uid="uid://be0ratveij3wd" path="res://assets/sprites/mud_mummy/walking/Timeline 1_0004.png" id="10_bvthk"]
[ext_resource type="Texture2D" uid="uid://bmjuu3c8mqg7h" path="res://assets/sprites/mud_mummy/walking/Timeline 1_0005.png" id="11_wm125"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4h4jj"]
radius = 22.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_16gak"]
radius = 15.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_06uet"]
radius = 22.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xhhnp"]
radius = 15.0
height = 80.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kj1do"]
size = Vector2(30, 60)

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_hb8k3"]
length = 30.0

[sub_resource type="Animation" id="Animation_g20w1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../walkindDraugr:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../wrapAroundPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../chargeDraugr:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../dead:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_iu1pe"]
resource_name = "attack_Draugr"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../wrapAroundPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_keyv8"]
resource_name = "charge"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../chargeDraugr:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fmmlc"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../dead:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7h87a"]
resource_name = "idle_movement"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../walkindDraugr:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qub5d"]
_data = {
"RESET": SubResource("Animation_g20w1"),
"attack_Draugr": SubResource("Animation_iu1pe"),
"charge": SubResource("Animation_keyv8"),
"dead": SubResource("Animation_fmmlc"),
"idle_movement": SubResource("Animation_7h87a")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_bu5kn"]
atlas = ExtResource("4_0ixoj")
region = Rect2(0, 0, 600, 650)

[sub_resource type="AtlasTexture" id="AtlasTexture_lom7i"]
atlas = ExtResource("2_f5ld2")
region = Rect2(72, 0, 1486, 519)

[sub_resource type="AtlasTexture" id="AtlasTexture_dggxu"]
atlas = ExtResource("3_p6vgn")
region = Rect2(0, 0, 600, 650)

[sub_resource type="SpriteFrames" id="SpriteFrames_mbqbr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu5kn")
}, {
"duration": 1.0,
"texture": ExtResource("5_g3g2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu5kn")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lom7i")
}],
"loop": true,
"name": &"charge",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dggxu")
}],
"loop": false,
"name": &"combat",
"speed": 15.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("6_2omg2")
}, {
"duration": 1.5,
"texture": ExtResource("7_khcqr")
}, {
"duration": 1.5,
"texture": ExtResource("8_tqyqj")
}, {
"duration": 1.5,
"texture": ExtResource("9_73ulm")
}, {
"duration": 1.5,
"texture": ExtResource("10_bvthk")
}, {
"duration": 1.5,
"texture": ExtResource("11_wm125")
}],
"loop": true,
"name": &"combat_movement",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f5ld2")
}],
"loop": false,
"name": &"die",
"speed": 15.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("9_73ulm")
}],
"loop": false,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("6_2omg2")
}, {
"duration": 1.5,
"texture": ExtResource("7_khcqr")
}, {
"duration": 1.5,
"texture": ExtResource("8_tqyqj")
}, {
"duration": 1.5,
"texture": ExtResource("9_73ulm")
}, {
"duration": 1.5,
"texture": ExtResource("10_bvthk")
}, {
"duration": 1.5,
"texture": ExtResource("11_wm125")
}],
"loop": true,
"name": &"idle_movement",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f5ld2")
}],
"loop": true,
"name": &"idle_stay",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f5ld2")
}],
"loop": false,
"name": &"lay_down",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f5ld2")
}],
"loop": false,
"name": &"stand_up",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f5ld2")
}],
"loop": false,
"name": &"wrap_around_player",
"speed": 15.0
}]

[node name="MudMummy" type="CharacterBody2D" groups=["mud_mummy"]]
collision_layer = 208
collision_mask = 208
script = ExtResource("1_ri1ep")

[node name="Timers" type="Node" parent="."]

[node name="ResetHPTimer" type="Timer" parent="Timers"]
wait_time = 10.0

[node name="ChargeTimer" type="Timer" parent="Timers"]

[node name="StunTimer" type="Timer" parent="Timers"]
wait_time = 3.0

[node name="IdleStayTimer" type="Timer" parent="Timers"]
wait_time = 5.0

[node name="HuhTimer" type="Timer" parent="Timers"]

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="TurnCooldownTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="NormalCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4h4jj")

[node name="ChargeCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 25)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_16gak")
disabled = true

[node name="NormalHurtbox" type="Area2D" parent="." groups=["mummy_hurtbox"]]
position = Vector2(-35, -25)
collision_layer = 6
collision_mask = 4

[node name="ColorRect" type="ColorRect" parent="NormalHurtbox"]
visible = false
offset_left = 20.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 65.0
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalHurtbox"]
position = Vector2(35, 25)
shape = SubResource("CapsuleShape2D_06uet")

[node name="ChargeHurtbox" type="Area2D" parent="." groups=["mummy_hurtbox"]]
collision_layer = 6
collision_mask = 4

[node name="ColorRect" type="ColorRect" parent="ChargeHurtbox"]
visible = false
offset_left = 40.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 90.0
rotation = 1.5708
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargeHurtbox"]
position = Vector2(0, 25)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xhhnp")
disabled = true

[node name="AttackHitbox" type="Area2D" parent="." groups=["mummy_attack"]]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
visible = false
position = Vector2(30, 0)
shape = SubResource("RectangleShape2D_kj1do")
disabled = true

[node name="ColorRect" type="ColorRect" parent="AttackHitbox/CollisionShape2D"]
visible = false
offset_left = -15.0
offset_top = -30.0
offset_right = 15.0
offset_bottom = 30.0
color = Color(1, 0, 0, 0.501961)

[node name="WallDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
rotation = -1.5708
shape = SubResource("SeparationRayShape2D_hb8k3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_qub5d")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(-0.121508, 0.121508)
sprite_frames = SubResource("SpriteFrames_mbqbr")
animation = &"wrap_around_player"
autoplay = "idle"

[node name="dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_4o23v")
volume_db = 2.0
max_distance = 750.0
attenuation = 1.56917

[node name="wrapAroundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ph1a7")
volume_db = 2.0
max_distance = 750.0
attenuation = 1.56917

[node name="chargeDraugr" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qyjaw")
volume_db = 5.0
max_distance = 750.0
attenuation = 1.56917

[node name="walkindDraugr" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ibqi1")
volume_db = 5.0
max_distance = 750.0
attenuation = 1.56917

[connection signal="timeout" from="Timers/ResetHPTimer" to="." method="_on_reset_hp_timer_timeout"]
[connection signal="timeout" from="Timers/ChargeTimer" to="." method="_on_charge_timer_timeout"]
[connection signal="timeout" from="Timers/StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="Timers/IdleStayTimer" to="." method="_on_idle_stay_timer_timeout"]
[connection signal="timeout" from="Timers/HuhTimer" to="." method="_on_huh_timer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timers/TurnCooldownTimer" to="." method="_on_turn_cooldown_timer_timeout"]
[connection signal="area_entered" from="NormalHurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="NormalHurtbox" to="." method="_on_hurtbox_area_exited"]
[connection signal="area_entered" from="ChargeHurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="ChargeHurtbox" to="." method="_on_hurtbox_area_exited"]
[connection signal="body_entered" from="WallDetector" to="." method="_on_wall_detector_body_entered"]
[connection signal="body_exited" from="WallDetector" to="." method="_on_wall_detector_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
